--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <button onclick="helloWorld()">Mohtabonu</button>
     <script src="/script.js"></script>
 </body>
 </html>
